--- a/moeed.html
+++ b/moeed.html
@@ -90,14 +90,14 @@ class ="form-group">
 
 
 
- <section class="text-gray-600 body-font">
-    <div class="container px-5 py-24 mx-auto">
+ <section class="text-gray-200 body-font">
+    <div class="container px-2 py-24 mx-auto">
       <div class="flex flex-col">
-        <div class="h-1 bg-gray-200 rounded overflow-hidden">
+        <div class="h-1 bg-gray-100 rounded overflow-hidden">
           <div class="w-24 h-full bg-indigo-500"></div>
         </div>
         <div class="flex flex-wrap sm:flex-row flex-col py-6 mb-12">
-          <h1 class="sm:w-2/5 text-gray-900 font-medium title-font text-2xl mb-2 sm:mb-0">Space The Final Frontier</h1>
+          <h1 class="sm:w-2/5 text-gray-100 font-medium title-font text-2xl mb-2 sm:mb-0">Space The Final Frontier</h1>
           <p class="sm:w-3/5 leading-relaxed text-base sm:pl-10 pl-0">Street art subway tile salvia four dollar toast bitters selfies quinoa yuccie synth meditation iPhone intelligentsia prism tofu. Viral gochujang bitters dreamcatcher.</p>
         </div>
       </div>
@@ -106,7 +106,7 @@ class ="form-group">
           <div class="rounded-lg h-64 overflow-hidden">
             <img alt="content" class="object-cover object-center h-full w-full" src="https://dummyimage.com/1203x503">
           </div>
-          <h2 class="text-xl font-medium title-font text-gray-900 mt-5">Shooting Stars</h2>
+          <h2 class="text-xl font-medium title-font text-gray-200 mt-5">Shooting Stars</h2>
           <p class="text-base leading-relaxed mt-2">Swag shoivdigoitch literally meditation subway tile tumblr cold-pressed. Gastropub street art beard dreamcatcher neutra, ethical XOXO lumbersexual.</p>
           <a class="text-indigo-500 inline-flex items-center mt-3">Learn More
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
@@ -141,6 +141,28 @@ class ="form-group">
       </div>
     </div>
   </section>
+  <header class="text-gray-200 body-font">
+    <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
+      <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full" viewBox="0 0 24 24">
+          <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
+        </svg>
+        <span class="ml-3 text-xl">Tailblocks</span>
+      </a>
+      <nav class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
+        <a class="mr-5 hover:text-gray-300">First Link</a>
+        <a class="mr-5 hover:text-gray-300">Second Link</a>
+        <a class="mr-5 hover:text-gray-300">Third Link</a>
+        <a class="mr-5 hover:text-gray-300">Fourth Link</a>
+      </nav>
+      <button class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Button
+        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+          <path d="M5 12h14M12 5l7 7-7 7"></path>
+        </svg>
+      </button>
+    </div>
+  </header>
+  
   
 </body>
 </html>
