--- a/hadia.html
+++ b/hadia.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home</title>
 </head>
-<body style="background-color: rgb(144, 42, 217);">
+<body style="background-color: rgb(4, 163, 163);"">
     <h1>hello peoples</h1>
     <p1>i love pakistan because pakistan is my country</p1>
     <form>
         <div class = "form-group">
             <label for ="username">username</label><br>
-           <input type ="text"> 
+           <input type ="text" placeholder="username" required> 
             </div>
             <div class ="form group">
                 <label for ="phone number">phone number</label><br>
-                <input type ="text"> 
+                <input type ="text" placeholder="phone number" required> 
             </div>
             <div class ="form-group"></div>
                 
@@ -65,8 +65,16 @@
 
 
    </ul>
-    
- 
+<ol>
+<li>go to in the kitchen </li>
+<li>use utensils</li>
+<li>......</li>
+
+
+</ol>
+<br>
+ <a href="https://www.google.com">go to google</a>
+ l
 
 </body>
 </html>
