--- a/hadia.html
+++ b/hadia.html
@@ -10,7 +10,7 @@
     <h1>hello peoples</h1>
     <p1>i love pakistan because pakistan is my country</p1>
     <form>
-        <div shanza class = "form-group">
+        <div class = "form-group">
             <label for ="username">username</label><br>
            <input type ="text" placeholder="username" required> 
             </div>
